--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,65 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer base {
 
-@media (prefers-color-scheme: dark) {
+
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 269 50% 95%;
+    --foreground: 269 5% 0%;
+    --card: 269 50% 90%;
+    --card-foreground: 269 5% 10%;
+    --popover: 269 50% 95%;
+    --popover-foreground: 269 95% 0%;
+    --primary: 269 62% 51%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 269 30% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 231 30% 85%;
+    --muted-foreground: 269 5% 35%;
+    --accent: 231 30% 80%;
+    --accent-foreground: 269 5% 10%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 269 5% 90%;
+    --border: 269 30% 50%;
+    --input: 269 30% 18%;
+    --ring: 269 62% 51%;
+    --radius: 0.5rem;
   }
+
+  .dark {
+    --background: 269 50% 5%;
+    --foreground: 269 5% 90%;
+    --card: 269 50% 0%;
+    --card-foreground: 269 5% 90%;
+    --popover: 269 50% 5%;
+    --popover-foreground: 269 5% 90%;
+    --primary: 269 62% 51%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 269 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 231 30% 15%;
+    --muted-foreground: 269 5% 60%;
+    --accent: 231 30% 15%;
+    --accent-foreground: 269 5% 90%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 269 5% 90%;
+    --border: 269 30% 18%;
+    --input: 269 30% 18%;
+    --ring: 269 62% 51%;
+    --radius: 0.5rem;
+  }
+
+
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+    @apply h-screen w-full
+  }
 }
