--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,58 +1,55 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-@layer base {
+@plugin 'tailwindcss-animate';
 
+@custom-variant dark (&:is(.dark *));
 
-  :root {
-    --background: 269 50% 95%;
-    --foreground: 269 5% 0%;
-    --card: 269 50% 90%;
-    --card-foreground: 269 5% 10%;
-    --popover: 269 50% 95%;
-    --popover-foreground: 269 95% 0%;
-    --primary: 269 62% 51%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 269 30% 70%;
-    --secondary-foreground: 0 0% 0%;
-    --muted: 231 30% 85%;
-    --muted-foreground: 269 5% 35%;
-    --accent: 231 30% 80%;
-    --accent-foreground: 269 5% 10%;
-    --destructive: 0 50% 30%;
-    --destructive-foreground: 269 5% 90%;
-    --border: 269 30% 50%;
-    --input: 269 30% 18%;
-    --ring: 269 62% 51%;
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 269 50% 5%;
-    --foreground: 269 5% 90%;
-    --card: 269 50% 0%;
-    --card-foreground: 269 5% 90%;
-    --popover: 269 50% 5%;
-    --popover-foreground: 269 5% 90%;
-    --primary: 269 62% 51%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 269 30% 10%;
-    --secondary-foreground: 0 0% 100%;
-    --muted: 231 30% 15%;
-    --muted-foreground: 269 5% 60%;
-    --accent: 231 30% 15%;
-    --accent-foreground: 269 5% 90%;
-    --destructive: 0 50% 30%;
-    --destructive-foreground: 269 5% 90%;
-    --border: 269 30% 18%;
-    --input: 269 30% 18%;
-    --ring: 269 62% 51%;
-    --radius: 0.5rem;
-  }
-
-
+:root {
+  --background: hsl(269 50% 95%);
+  --foreground: hsl(269 5% 0%);
+  --card: hsl(269 50% 90%);
+  --card-foreground: hsl(269 5% 10%);
+  --popover: hsl(269 50% 95%);
+  --popover-foreground: hsl(269 95% 0%);
+  --primary: hsl(269 62% 51%);
+  --primary-foreground: hsl(0 0% 100%);
+  --secondary: hsl(269 30% 70%);
+  --secondary-foreground: hsl(0 0% 0%);
+  --muted: hsl(231 30% 85%);
+  --muted-foreground: hsl(269 5% 35%);
+  --accent: hsl(231 30% 80%);
+  --accent-foreground: hsl(269 5% 10%);
+  --destructive: hsl(0 50% 30%);
+  --destructive-foreground: hsl(269 5% 90%);
+  --border: hsl(269 30% 50%);
+  --input: hsl(269 30% 18%);
+  --ring: hsl(269 62% 51%);
+  --radius: 0.5rem;
 }
+
+.dark {
+  --background: hsl(269 50% 5%);
+  --foreground: hsl(269 5% 90%);
+  --card: hsl(269 50% 0%);
+  --card-foreground: hsl(269 5% 90%);
+  --popover: hsl(269 50% 5%);
+  --popover-foreground: hsl(269 5% 90%);
+  --primary: hsl(269 62% 51%);
+  --primary-foreground: hsl(0 0% 100%);
+  --secondary: hsl(269 30% 10%);
+  --secondary-foreground: hsl(0 0% 100%);
+  --muted: hsl(231 30% 15%);
+  --muted-foreground: hsl(269 5% 60%);
+  --accent: hsl(231 30% 15%);
+  --accent-foreground: hsl(269 5% 90%);
+  --destructive: hsl(0 50% 30%);
+  --destructive-foreground: hsl(269 5% 90%);
+  --border: hsl(269 30% 18%);
+  --input: hsl(269 30% 18%);
+  --ring: hsl(269 62% 51%);
+  --radius: 0.5rem;
+}
+
 
 @layer base {
   * {
@@ -62,5 +59,98 @@
   body {
     @apply bg-background text-foreground;
     @apply h-screen w-full
+  }
+}
+
+@theme inline {
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
+
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+
+
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+
+    to {
+      height: var(--radix-accordion-content-height);
+    }
+  }
+
+  @keyframes accordion-up {
+    from {
+      height: var(--radix-accordion-content-height);
+    }
+
+    to {
+      height: 0;
+    }
+  }
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 2rem;
+
+  @media (width >=--theme(--breakpoint-sm)) {
+    max-width: none;
+  }
+
+  @media (width >=1400px) {
+    max-width: 1400px;
+  }
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+
+  button {
+    @apply cursor-pointer
   }
 }
